--- a/_posts/cyr/2021-12-10-ertek.md
+++ b/_posts/cyr/2021-12-10-ertek.md
@@ -7,6 +7,14 @@ ref: fairy-tale
 tags: Норвегия суверен-фонд youtube
 ---
 
-Бир бар екен, бир жоқ екен, ҳәзирги заманда Норвегия деген мәмлекет болған екен. Ҳәзирги күнде дүньядағы ең бай мәмлекетлер қатарына киргени менен, барлық ўақыт ҳәм ондай болмаған. 1970-жыллары нефть кәнлериниң табылыўы Норвегияның раўажланыўына үлкен үлес қосқан. Бирақ гейбир нефтьке бай мәмлекетлерге усап нефтьтен түскен пайданы сиясий элита я олигархлардың қалтасына түсирмей, мәмлекеттиң раўажланыўына сарыплаған. Ал нефтьтиң баҳасы жүдә жоқары болған ўақытлары артықша пайданы [Норвегия суверен фонды](https://www.nbim.no/)на "айдаған", ол фондтың тийкарғы ўазыйпасы келешекте "қара күн"лер болып қалса, сол ўақытта ондағы қәрежетлерден пайдаланыў. Енди фондта ҳәзирги күнде жыйналған сумманы еситиң: **1,3 триллион АҚШ доллар** эквивалентинен аслам, еслетип өтемен триллионда **12** ноль бар. Тап бүгин сол фондтағы бар қаржыны барлық халқына теңдей бөлип жиберсе, адам басына 220 мың доллардан түседи екен, Карл! Улыўма норвеглердиң тәбиятқа болған қатнасы, экология, мәмлекеттиң келешеги ҳаққында ойлаўлары мақтаўға арзыйды. Тәбиятын енди айтпасада болады, Птушкин [видеода](https://www.youtube.com/watch?v=zyZAMR56mXY) жүдә ҳәм жақсы көрсетип берген. Норвегия адамлар ушын "қурылған" мәмлекет екени көринип турыпты. Видеоны көрип отырып еки қыйлы сезим болды. Бир жақтан ондай адамлар ушын қолай мәмлекеттиң болғаны жүдә ҳәм жақсы, норвеглер қандай бахытлы адамлар. Бирақ басқа жақтан, бизлерде ондай дәрежеге жетиўге неше әўлад кетеди екен, өзи ондай дәрежеге жете аладыма екен қашан болсада? 😢
+Бир бар екен, бир жоқ екен. Ҳәзирги өтип атырған заманда Норвегия деген мәмлекет болған екен. Бүгинлигинде дүньядағы ең бай мәмлекетлер қатарына киргени менен, барлық ўақыт ҳәм ондай болмаған екен.
+
+1970-жыллары нефть кәнлериниң табылыўы Норвегияның раўажланыўына үлкен үлес қосыпты. Бирақ, гейбир нефтьке бай мәмлекетлер сыяқлы нефтьтен түскен пайда сиясий элита яки олигархлардың қалталарына түсирилмей, мәмлекеттиң раўажланыўына сарпланыпты. Ал, нефтьтиң баҳасы жүдә жоқары болған ўақытларда, артықша пайда [Норвегия суверен фонды](https://www.nbim.no/)на “айдалынған” екен. Ол фондтың тийкарғы ўазыйпасы келешекте ел басына “қара күнлер” түсип қалған жағдайда, ондағы қәрежетлерден мақсетли пайдаланыў болған екен.
+
+Енди фондта ҳәзирги күнде жыйналған сумманы еситиң: **1,3 триллион АҚШ доллар** эквивалентинен аслам (еслетип өтемен, триллионда **12** ноль бар). Тап бүгин сол фондтағы барлық қаржыны Норвегия өз халқына теңдей бөлистирип жиберсе, адам басына 220 мың доллардан түседи екен. 220 мың доллар, Карл!
+
+Улыўма алғанда, норвеглердиң тәбиятқа болған қатнасы, экология, мәмлекеттиң ертеңги келешегине болған итибары мақтаўға арзыйды. Тәбиятын, енди, айтпасаң да болады. Птушкин буны [видеода](https://www.youtube.com/watch?v=zyZAMR56mXY) жүдә ҳәм жақсы көрсетип берген.
+
+Норвегия адамлар ушын қурылған мәмлекет екенлиги көринип тур. Видеоны көрип отырып, еки қыйлы сезим болды: бир жағынан, адамлар ушын бундай қолай мәмлекеттиң бар болғаны жүдә ҳәм жақсы, норвеглер қандай бахытлы адамлар, лекин басқа жағынан алып қарағанда, бизлер де сол дәрежеге жете алады ма екенбиз деген сораў өз-өзинен пайда болады. Буған неше әўладтиң өмири кетер екен, егер илажы болса ҳәм қашан болса да, усы дәрежеге жете аламыз ба өзи? 😢
 
 [![Ptushkin Norway youtube screenshot](/assets/img/ptushkin-norway-youtube-screenshot.jpg "Ptushkin Norway youtube screenshot")](https://www.youtube.com/watch?v=zyZAMR56mXY)
