--- a/_posts/lat/2021-12-10-ertek.md
+++ b/_posts/lat/2021-12-10-ertek.md
@@ -7,6 +7,14 @@ ref: fairy-tale
 tags: Norvegiya suveren-fond youtube
 ---
 
-Bir bar eken, bir joq eken, házirgi zamanda Norvegiya degen mámleket bolǵan eken. Házirgi kúnde dúnyadaǵı eń bay mámleketler qatarına kirgeni menen, barlıq waqıt hám onday bolmaǵan. 1970-jılları neft kánleriniń tabılıwı Norvegiyanıń rawajlanıwına úlken úles qosqan. Biraq geybir neftke bay mámleketlerge usap neftten túsken paydanı siyasiy elita ya oligarxlardıń qaltasına túsirmey, mámlekettiń rawajlanıwına sarıplaǵan. Al nefttiń bahası júdá joqarı bolǵan waqıtları artıqsha paydanı [Norvegiya suveren fondı](https://www.nbim.no/)na "aydaǵan", ol fondtıń tiykarǵı wazıypası keleshekte "qara kúnler" bolıp qalsa, sol waqıtta ondaǵı qárejetlerden paydalanıw. Endi fondta házirgi kúnde jıynalǵan summanı esitiń: **1,3 trillion AQSh dollar** ekvivalentinen aslam, esletip ótemen trillionda **12** nol bar. Tap búgin sol fondtaǵı bar qarjını barlıq xalqına teńdey bólip jiberse, adam basına 220mıń dollardan túsedi eken, Karl! Ulıwma norveglerdiń tábiyatqa bolǵan qatnası, ekologiya, mámlekettiń keleshegi haqqında oylawları maqtawǵa arzıydı. Tábiyatın endi aytpasada boladı, Ptushkin [videoda](https://www.youtube.com/watch?v=zyZAMR56mXY) júdá hám jaqsı kórsetip bergen. Norvegiya adamlar ushın "qurılǵan" mámleket ekeni kórinip turıptı. Videonı kórip otırıp eki qıylı sezim boldı. Bir jaqtan onday adamlar ushın qolay mámlekettiń bolǵanı júdá hám jaqsı, norvegler qanday baxıtlı adamlar. Biraq basqa jaqtan, bizlerde onday dárejege jetiwge neshe áwlad ketedi eken, ózi onday dárejege jete aladıma eken qashan bolsada? 😢
+Bir bar eken, bir joq eken. Házirgi ótip atırǵan zamanda Norvegiya degen mámleket bolǵan eken. Búginliginde dúnyadaǵı eń bay mámleketler qatarına kirgeni menen, barlıq waqıt hám onday bolmaǵan eken.
+
+1970-jılları neft kánleriniń tabılıwı Norvegiyanıń rawajlanıwına úlken úles qosıptı. Biraq, geybir neftke bay mámleketler sıyaqlı neftten túsken payda siyasiy elita yaki oligarxlardıń qaltalarına túsirilmey, mámlekettiń rawajlanıwına sarplanıptı. Al, nefttiń bahası júdá joqarı bolǵan waqıtlarda, artıqsha payda [Norvegiya suveren fondı](https://www.nbim.no/)na “aydalınǵan” eken. Ol fondtıń tiykarǵı wazıypası keleshekte el basına “qara kúnler” túsip qalǵan jaǵdayda, ondaǵı qárejetlerden maqsetli paydalanıw bolǵan eken.
+
+Endi fondta házirgi kúnde jıynalǵan summanı esitiń: **1,3 trillion AQSh dollar** ekvivalentinen aslam (esletip ótemen, trillionda **12** nol bar). Tap búgin sol fondtaǵı barlıq qarjını Norvegiya óz xalqına teńdey bólistirip jiberse, adam basına 220 mıń dollardan túsedi eken. 220 mıń dollar, Karl!
+
+Ulıwma alǵanda, norveglerdiń tábiyatqa bolǵan qatnası, ekologiya, mámlekettiń erteńgi keleshegine bolǵan itibarı maqtawǵa arzıydı. Tábiyatın, endi, aytpasań da boladı. Ptushkin bunı [videoda](https://www.youtube.com/watch?v=zyZAMR56mXY) júdá hám jaqsı kórsetip bergen.
+
+Norvegiya adamlar ushın qurılǵan mámleket ekenligi kórinip tur. Videonı kórip otırıp, eki qıylı sezim boldı: bir jaǵınan, adamlar ushın bunday qolay mámlekettiń bar bolǵanı júdá hám jaqsı, norvegler qanday baxıtlı adamlar, lekin basqa jaǵınan alıp qaraǵanda, bizler de sol dárejege jete aladı ma ekenbiz degen soraw óz-ózinen payda boladı. Buǵan neshe áwladtiń ómiri keter eken, eger ilajı bolsa hám qashan bolsa da, usı dárejege jete alamız ba ózi? 😢
 
 [![Ptushkin Norway youtube screenshot](/assets/img/ptushkin-norway-youtube-screenshot.jpg "Ptushkin Norway youtube screenshot")](https://www.youtube.com/watch?v=zyZAMR56mXY)
