--- a/_posts/cyr/2022-01-26-salamat.md
+++ b/_posts/cyr/2022-01-26-salamat.md
@@ -7,6 +7,10 @@ ref: salamat
 tags: мақсет жетискенлик
 ---
 
-Саламат ҳаққында Өзбекистан телевидениеси каналларының биринде [көрсетиў](https://www.youtube.com/watch?v=n0TW8C5f5Ng) таярлаған екен, ҳәммеге көриўди мәсләҳәт еткен болар едим. Саламат пенен 2018-жылы Азиз екеўимиз ТАТУ Нөкис филиалында бир қысқа семинар өткенде танысып, азмас сөйлескен едик. Оннан берли арасында мессенжер я социал тармақлар арқалы жазысып турамыз. Саламатты мен жүдә ҳәрекетшең, талапшаң жигит деп билемен, өзиниң алдына қандайдир бир мақсет қойған болса соған ерисиўге барлық күши менен ҳәрекет етеди. Бул жерде биреўлер айтыўы мүмкин, алдына мақсет қойып, соған ерисиў ҳәм жетискенликпе деп. Әлбетте бул жетискенлик, мениң бақлаўым бойынша бизде бундай адамлар азшылық. Гейбир адамлар ҳәтте алдына мақсет қойыўдыда билмейди, оған жетисиў бир жақта турсын. Саламат болса қандай қыйыншылықлар ҳәм шеклеўлер болмасын, барлығын жеңип өтип, өзиниң қызыққан тараўы - IT тараўының жақсы маманына айланды ҳәм көплеген жетискенликлерге еристи. Сол ушын, Саламатты көпшилик адамларға өрнек ретинде көрсетиўге арзыйтуғын инсан деп билемен. Саламаттан өзиниң үстинде ислеўди тоқтатпай (исенемен, буны өзи жақсы биледи), еледе көплеген жетискенликлери менен бизлерди қуўантыўды даўам етеди деп үмит етемиз. Алға Саламат!
+Саламат ҳаққында Өзбекстан телеканалларының биринде [көрсетиў](https://www.youtube.com/watch?v=n0TW8C5f5Ng) таярланған екен, ҳәммеге көриўди мәсләҳәт еткен болар едим. Саламат пенен Азиз екеўимиз ТИТУ Нөкис филиалында, 2018-жылы бир қысқа семинар өткен ўақытта танысып, азмаз сөйлескен едик. Оннан берли арасында мессенжер яки социал тармақлар арқалы жазысып турамыз.
+
+Саламатты мен жүдә ҳәрекетшең, талапшаң жигит деп билемен. Өзиниң алдына қандайда бир мақсет қойған болса, соған ерисиў ушын барлық күши менен ҳәрекет етеди. Бул жерде биреўлер айтыўы мүмкин, “алдына мақсет қойып, соған ерисиў ҳәм жетискенлик пе?” деп. Әлбетте, бул жетискенлик. Мениң бақлаўым бойынша, бизде бундай өз жолын белгилей алыўшы адамлар азшылық. Гейбир адамлар ҳәтте алдына мақсет қойыўды да билмейди, оған жетисиў бир жақта турсын. Саламат болса қандай қыйыншылықлар ҳәм шеклеўлер болмасын, барлығын жеңип өтип, өзиниң қызыққан тараўы — IT тараўының жақсы маманына айланды ҳәм көплеген нәтийжелерге еристи. Сонлықтан, Саламатты көпшилик адамларға үлги ретинде көрсетиўге арзыйтуғын инсан деп билемен.
+
+Исенемен, Саламат өзиниң үстинде ислеўди тоқтатпай, еле де көплеген жетискенликлери менен бизлерди қуўантыўда даўам етеди. Алға, Саламат!
 
 [![Oramizdagi odamlar youtube screenshot](/assets/img/oramizdagi-odamlar-youtube-screenshot.jpg "Oramizdagi odamlar youtube screenshot")](https://www.youtube.com/watch?v=n0TW8C5f5Ng)
