--- a/_posts/lat/2022-01-26-salamat.md
+++ b/_posts/lat/2022-01-26-salamat.md
@@ -7,6 +7,10 @@ ref: salamat
 tags: maqset jetiskenlik
 ---
 
-Salamat haqqında Ózbekistan televideniesi kanallarınıń birinde [kórsetiw](https://www.youtube.com/watch?v=n0TW8C5f5Ng) tayarlaǵan eken, hámmege kóriwdi másláhát etken bolar edim. Salamat penen 2018-jılı Aziz ekewimiz TATU Nókis filialında bir qısqa seminar ótkende tanısıp, azmas sóylesken edik. Onnan berli arasında messenjer ya social tarmaqlar arqalı jazısıp turamız. Salamattı men júdá háreketsheń, talapshań jigit dep bilemen, óziniń aldına qandaydir bir maqset qoyǵan bolsa soǵan erisiwge barlıq kúshi menen háreket etedi. Bul jerde birewler aytıwı múmkin, aldına maqset qoyıp, soǵan erisiw hám jetiskenlikpe dep. Álbette bul jetiskenlik, meniń baqlawım boyınsha bizde bunday adamlar azshılıq. Geybir adamlar hátte aldına maqset qoyıwdıda bilmeydi, oǵan jetisiw bir jaqta tursın. Salamat bolsa qanday qıyınshılıqlar hám sheklewler bolmasın, barlıǵın jeńip ótip, óziniń qızıqqan tarawı - IT tarawınıń jaqsı mamanına aylandı hám kóplegen jetiskenliklerge eristi. Sol ushın, Salamattı kópshilik adamlarǵa órnek retinde kórsetiwge arzıytuǵın insan dep bilemen. Salamattan óziniń ústinde islewdi toqtatpay (isenemen, bunı ózi jaqsı biledi), elede kóplegen jetiskenlikleri menen bizlerdi quwantıwdı dawam etedi dep úmit etemiz. Alǵa Salamat!
+Salamat haqqında Ózbekstan telekanallarınıń birinde [kórsetiw](https://www.youtube.com/watch?v=n0TW8C5f5Ng) tayarlanǵan eken, hámmege kóriwdi másláhát etken bolar edim. Salamat penen Aziz ekewimiz TITU Nókis filialında, 2018-jılı bir qısqa seminar ótken waqıtta tanısıp, azmaz sóylesken edik. Onnan berli arasında messenjer yaki social tarmaqlar arqalı jazısıp turamız.
+
+Salamattı men júdá háreketsheń, talapshań jigit dep bilemen. Óziniń aldına qandayda bir maqset qoyǵan bolsa, soǵan erisiw ushın barlıq kúshi menen háreket etedi. Bul jerde birewler aytıwı múmkin, “aldına maqset qoyıp, soǵan erisiw hám jetiskenlik pe?” dep. Álbette, bul jetiskenlik. Meniń baqlawım boyınsha, bizde bunday óz jolın belgiley alıwshı adamlar azshılıq. Geybir adamlar hátte aldına maqset qoyıwdı da bilmeydi, oǵan jetisiw bir jaqta tursın. Salamat bolsa qanday qıyınshılıqlar hám sheklewler bolmasın, barlıǵın jeńip ótip, óziniń qızıqqan tarawı — IT tarawınıń jaqsı mamanına aylandı hám kóplegen nátiyjelerge eristi. Sonlıqtan, Salamattı kópshilik adamlarǵa úlgi retinde kórsetiwge arzıytuǵın insan dep bilemen.
+
+Isenemen, Salamat óziniń ústinde islewdi toqtatpay, ele de kóplegen jetiskenlikleri menen bizlerdi quwantıwda dawam etedi. Alǵa, Salamat!
 
 [![Oramizdagi odamlar youtube screenshot](/assets/img/oramizdagi-odamlar-youtube-screenshot.jpg "Oramizdagi odamlar youtube screenshot")](https://www.youtube.com/watch?v=n0TW8C5f5Ng)
